force-app/main/default/objects/KDCE_DormantOfflineProgram__c/KDCE_DormantOfflineProgram__c.object-meta.xml
<CustomObject>
    <label>Dormant OfflineProgram</label>
    <nameField>
        <label>Dormant OfflineProgram Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dormant OfflineProgram</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>