force-app/main/default/objects/KDCE_DormantOfflineProgram__c/fields/ActionDate__c.field-meta.xml
<CustomField>
    <fullName>ActionDate__c</fullName>
    <description>[KDCE] Date/Time the Offline Program was created</description>
    <label>Action Date</label>
    <type>DateTime</type>
</CustomField>