force-app/main/default/objects/KDCE_DormantOfflineProgram__c/fields/CancelDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDate__c</fullName>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>