force-app/main/default/objects/KDCE_DormantOfflineProgram__c/fields/KDCE_OfflineProgramId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OfflineProgramId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Program Id</label>
    <referenceTo>KDCE_OfflineProgram__c</referenceTo>
    <relationshipLabel>Dormant OfflineProgram</relationshipLabel>
    <relationshipName>Dormant_OfflineProgram</relationshipName>
    <type>Lookup</type>
</CustomField>