force-app/main/default/objects/KDCE_DormantOfflineProgram__c/fields/RentalStartDate__c.field-meta.xml
<CustomField>
    <fullName>RentalStartDate__c</fullName>
    <description>[KDCE] Rental Start Date</description>
    <label>Rental Start Date</label>
    <type>Date</type>
</CustomField>