force-app/main/default/objects/KDCE_DormantOfflineProgram__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Rental Process</fullName>
            </value>
            <value>
                <fullName>Rental Cancel</fullName>
            </value>
            <value>
                <fullName>Rental Closed</fullName>
            </value>
            <value>
                <fullName>Rental Purchase</fullName>
            </value>
            <value>
                <fullName>Rental Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>